<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <packaging>pom</packaging>
    <groupId>oap</groupId>
    <artifactId>oap-teamcity-parent</artifactId>
    <version>${oap-teamcity.project.version}</version>

    <prerequisites>
        <maven>3.6.3</maven>
    </prerequisites>

    <name>oap</name>

    <modules>
        <module>oap-teamcity</module>
        <module>oap-teamcity-testng</module>
        <module>oap-teamcity-folder-size-maven</module>
    </modules>

    <repositories>
        <repository>
            <id>oap</id>
            <url>https://artifacts.oaplatform.org/repository/oap-maven/</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>oap</id>
            <url>https://artifacts.oaplatform.org/repository/oap-maven/</url>
        </repository>
    </distributionManagement>

    <properties>
        <oap-teamcity.project.version>22.0.0</oap-teamcity.project.version>

        <maven.compiler.release>22</maven.compiler.release>
        <encoding>UTF-8</encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <oap.deps.guava.version>33.1.0-jre</oap.deps.guava.version>
        <oap.deps.testng.version>7.10.1</oap.deps.testng.version>
        <oap.deps.lombok.version>1.18.32</oap.deps.lombok.version>

        <oap.deps.maven.flatten.version>1.6.0</oap.deps.maven.flatten.version>
        <oap.deps.maven.jar.version>3.3.0</oap.deps.maven.jar.version>
        <oap.deps.maven.compiler.version>3.13.0</oap.deps.maven.compiler.version>
        <oap.deps.maven.checkstyle.version>3.3.1</oap.deps.maven.checkstyle.version>
        <oap.deps.checkstyle.version>10.15.0</oap.deps.checkstyle.version>
        <oap.deps.maven.source.version>3.3.1</oap.deps.maven.source.version>
        <oap.deps.maven.surefire.version>3.2.5</oap.deps.maven.surefire.version>

        <oap.deps.mavem-plugin-api.version>3.9.6</oap.deps.mavem-plugin-api.version>
        <oap.deps.mavem-plugin-annotations.version>3.12.0</oap.deps.mavem-plugin-annotations.version>
        <oap.deps.maven-plugin-plugin.version>3.12.0</oap.deps.maven-plugin-plugin.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-plugin-plugin</artifactId>
                    <version>${oap.deps.maven-plugin-plugin.version}</version>
                    <configuration>
                        <goalPrefix>oap</goalPrefix>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${oap.deps.maven.compiler.version}</version>
                <configuration>
                    <useIncrementalCompilation>true</useIncrementalCompilation>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <arg>-Xlint:unchecked</arg>
                        <arg>--add-modules</arg>
                        <arg>java.xml,java.compiler</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${oap.deps.maven.jar.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${oap.deps.maven.source.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${oap.deps.maven.flatten.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${oap.deps.maven.checkstyle.version}</version>
                <configuration>
                    <configLocation>https://raw.githubusercontent.com/oaplatform/oap-maven/master/.idea/checkstyle.xml
                    </configLocation>
                    <encoding>UTF-8</encoding>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <linkXRef>false</linkXRef>
                    <sourceDirectories>
                        <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
                        <sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
                    </sourceDirectories>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${oap.deps.checkstyle.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>

                <configuration>
                    <argLine>
                        -ea
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.math=ALL-UNNAMED
                        --add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.base/java.util.stream=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
                        --add-opens=java.base/java.net=ALL-UNNAMED
                        --add-opens=java.base/java.text=ALL-UNNAMED
                        --add-opens=java.base/java.io=ALL-UNNAMED
                        --add-opens=java.base/java.nio=ALL-UNNAMED
                        --add-opens=java.sql/java.sql=ALL-UNNAMED
                    </argLine>
                    <forkCount>1</forkCount>
                    <!-- Activate the use of TCP to transmit events to the plugin -->
                    <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
                    <reuseForks>true</reuseForks>
                    <trimStackTrace>false</trimStackTrace>
                    <testFailureIgnore>true</testFailureIgnore>
                    <useFile>false</useFile>
                    <disableXmlReport>true</disableXmlReport>
                    <printSummary>false</printSummary>
                    <forkedProcessTimeoutInSeconds>4800</forkedProcessTimeoutInSeconds>
                    <useSystemClassLoader>true</useSystemClassLoader>
                    <runOrder>balanced</runOrder>
                    <includes>
                        <include>**/*Test.*</include>
                    </includes>
                    <excludes>
                        <exclude>**/*Performance.*</exclude>
                        <exclude>**/*Perf.*</exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>